[package]
name = "multi-start"
version = "0.1.1"
edition = "2021"
description = "Launch browser bookmarks directly from the terminal"
license = "Unlicense"
repository = "https://github.com/lesleyrs/multi-start"
keywords = ["bookmarks", "cli", "web", "json", "terminal"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.97"
time = { version = "0.3.22", features = ["local-offset"] }

[[bin]]
name = "bm"
path = "src/main.rs"
